# ninja-adventure

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  GAME.md  GAMEPLAY.md  LICENSE  README.md  RENDER_SPEC.md  ROADMAP.md
assets/: CREDITS.md  TILE_INDEX.md  tile_index.json
assets/_gen/prefabs/: camp_clearing.json  forest_cottage.json  fort_courtyard.json  fort_gate.json  lake_islands.json  market_yard.json  north_treeline_well.json  snow_pond.json  south_orchard.json  stairs_plaza.json  street_houses.json  test_plot.json  waterfall_bridge.json
docs/: AUTHORING.md
rfc-spec/: IMPLEMENTATION_MAP.md  README.md  RECONCILIATION.md  RFC-001-ability-system.md  RFC-001-combat-entity-and-materials.md  RFC-002-status-effect-framework.md  RFC-003-physics-material-interaction.md  RFC-004-terrain-combat-entity.md  RFC-005-boss-ability-authoring.md  RFC-006-visual-fx-telegraph-standards.md  RFC-007-rl-observation-action-space.md  RFC-008-data-driven-skill-definition.md  RFC-009-damage-resistance-buildup.md  RFC-010-battlefield-simulation.md  RFC-010-rl-observation-schema.md  RFC-011-combat-hud-input-cooldown.md  RFC-012-combat-audio-sound-cues.md  RFC-013-vitals-death-recovery.md  RFC-014-instance-realm-lifecycle.md  RFC-015-client-replication-protocol.md  RFC-016-persistence-save-format.md  RFC-017-balance-tuning-test-harness.md  RFC-018-loot-essence-reward-tables.md  RFC-019-progression-and-skills.md  RFC-020-mission-quest-system.md  RFC-021-world-map-wayfinding.md  RFC-022-map-system.md  RFC-023-character-npc-roster.md  RFC-024-leader-failure-recovery.md  RFC_Unified_Combat_System.md
src/: client_main.cpp  probe_main.cpp  sim_main.cpp  worldmap_main.cpp
src/render/: atlas_slots.hpp  raylib_bridge.cpp  raylib_bridge.hpp  ui_sprites.hpp
src/ui/: audio.cpp  audio.hpp  screens.cpp  screens.hpp
src/world/: abilities.hpp  account.hpp  boss.hpp  chunk_actor.hpp  flow_field.hpp  map_director.hpp  player_actor.hpp  prefab_stamp.hpp  prefabs.hpp  protocol.hpp  snapshot.hpp  tiles.hpp  village.hpp  world.hpp  worldgen.hpp
tools/: _autotile.json  atlas_preview.py  autotile_fit.py  build_atlas.py  build_tile_index.py  check_sprite_rects.py  contact_sheet.py  fetch_assets.sh  gen_sprites.py  gen_vfx.py  godot_study.py  import_ai.py  import_prefabs.py  mock_world.py  screen_metric.py  study_examples.py  tile_labels.py  tile_metrics.py  verify_structures.py
tools/testdata/: test_plot.tscn  test_plot.tscn.meta.md
